Úkol 02 - Základ tvorby webových stránek - přidání CSS

--- a/skupinaA/01-zakladni-web/index.html
+++ b/skupinaA/01-zakladni-web/index.html
@@ -25,7 +25,7 @@
             <section class="grid-container">
                 <article class="card">
                     <h2>článek 1</h2>
-                    <p>Vítejte na naší úvodní stránce!</p>
+                    <p><b>Vítejte na naší úvodní stránce!</p></b></p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
                 </article>
 
