Úkol 02 - Základ tvorby webových stránek Fixes #2 - doplnění pár css srand

--- a/skupinaA/01-zakladni-web/index.html
+++ b/skupinaA/01-zakladni-web/index.html
@@ -46,6 +46,32 @@
                     <h2>článek 4</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
                 </article>
+
+                <article class="card">
+                    <h2>článek 5</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nostrum laboriosam quam quae vitae ab sunt eaque maxime libero deserunt, fugiat deleniti et optio ullam nemo aperiam explicabo recusandae amet?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis distinctio corporis itaque dolorem, error beatae similique ad id? Dolores repellat nobis quasi sunt quos asperiores ipsam alias doloribus natus magnam!</p>
+                </article>
+
+                <article class="card">
+                    <h2>článek 6</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nostrum laboriosam quam quae vitae ab sunt eaque maxime libero deserunt, fugiat deleniti et optio ullam nemo aperiam explicabo recusandae amet?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis distinctio corporis itaque dolorem, error beatae similique ad id? Dolores repellat nobis quasi sunt quos asperiores ipsam alias doloribus natus magnam!</p>
+                </article>
+
+                <article class="card">
+                    <h2>článek 7</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, voluptatem suscipit? Temporibus rem nobis, asperiores suscipit nam sed eius exercitationem quam blanditiis deleniti magnam hic unde est eaque cum ipsam?</p>
+                </article>
+
+                <article class="card">
+                    <h2>článek 8</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias blanditiis dolore eaque facere commodi quidem iure officiis voluptatum neque eius minus tempora ullam deleniti voluptatem natus aliquid error, in est.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, voluptatem suscipit? Temporibus rem nobis, asperiores suscipit nam sed eius exercitationem quam blanditiis deleniti magnam hic unde est eaque cum ipsam?</p>
+                </article>
             </section>
         </main>
 
